9.136:kanban @ dark mode: fix bottom gradient

--- a/css/styl/2.0.styl
+++ b/css/styl/2.0.styl
@@ -162,7 +162,7 @@ h2
       bottom 0
       width 100%
       height 100px
-      background linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%)
+      background linear-gradient(180deg, var(--kanban-fade-from-color) 0%, var(--kanban-fade-to-color) 100%)
 
 .t-comment-item-wrapper
   display flex
